--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
   "name": "green-datacenter-selector",
-  "version": "0.1.0",
-  "private": true,
-  "description": "An application to identify the best data centre to deploy workloads based on environmental impact of electricity",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "@carbon/react": "^1.37.0",
+    "@carbon/styles": "^1.37.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "sass": "^1.69.5",
+    "vite": "^5.0.8"
   }
 }
