--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@carbon/react": "^1.37.0",
-    "@carbon/styles": "^1.37.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
+    "@carbon/styles": "^1.37.0",
+    "vite": "^5.0.8",
     "sass": "^1.69.5",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-react": "^4.2.0"
   }
 }
