--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,21 @@
 server {
     listen 8080;
     server_name _;
-    root /usr/share/nginx/html;
+    root /opt/app-root/src/dist;
     index index.html;
 
     # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # SPA routing - serve index.html for all routes
+    # Main location
     location / {
         try_files $uri $uri/ /index.html;
     }
