--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l 8080"
   },
   "dependencies": {
+    "@carbon/react": "^1.37.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@carbon/react": "^1.37.0",
-    "@carbon/styles": "^1.37.0",
-    "vite": "^5.0.8",
     "sass": "^1.69.5",
-    "@vitejs/plugin-react": "^4.2.0"
+    "serve": "^14.2.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.8"
   }
 }
