--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
-    "serve": "^14.2.1"
-  },
-  "devDependencies": {
+    "serve": "^14.2.1",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
   }
